1-ingress-controller-defs.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: native-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: oci.oraclecloud.com/native-ingress-controller
  parameters:
    scope: Namespace
    namespace: native-ingress-controller-system
    apiGroup: ingress.oraclecloud.com
    kind: ingressclassparameters
    name: native-ingress-class-paramters
