3-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: path1-content
          mountPath: /usr/share/nginx/html/path1
        - name: path2-content
          mountPath: /usr/share/nginx/html/path2
        - name: default-content
          mountPath: /usr/share/nginx/html/default
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: path1-content
        configMap:
          name: static-content-path1
      - name: path2-content
        configMap:
          name: static-content-path2
      - name: default-content
        configMap:
          name: static-content-default
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
